tests/NormalTests/paczka1/fuzzy1/83316150.err
Error in line 5: GmRtMQQ S203 43,0
Error in line 2: fnUKmpp A984 90,2
Error in line 3: S203 A984 89,7
Error in line 8: fnUKmpp S194 48,9
Error in line 17: uLbOGzE S194 3926
Error in line 25: 0EuoRB8J S203 41,26
Error in line 21: jC3tavDT A454 41,9
Error in line 32: GmRtMQQ A454 92,5
Error in line 26: jC3tavDT A984 50,6
